@@ -21,8 +21,8 @@ public class Abs extends PostfixMathCommand
 
     public Object abs(Object param) throws ParseException
     {
-        if (param instanceof Complex) return new Double(((Complex) param).abs());
-        else if (param instanceof Number) return new Double(Math.abs(((Number) param).doubleValue()));
+        if (param instanceof Complex) return Double.valueOf(((Complex) param).abs());
+        else if (param instanceof Number) return Double.valueOf(Math.abs(((Number) param).doubleValue()));
 
         throw new ParseException("Invalid parameter type");
     }
