@@ -33,7 +33,7 @@ public class Add extends PostfixMathCommand
 
     public Double add(Number d1, Number d2)
     {
-        return new Double(d1.doubleValue() + d2.doubleValue());
+        return Double.valueOf(d1.doubleValue() + d2.doubleValue());
     }
 
     public Object add(Object param1, Object param2) throws ParseException
