@@ -23,7 +23,7 @@ public class Power extends PostfixMathCommand
     {
         final Complex temp = c1.power(c2);
 
-        if (temp.im() == 0) return new Double(temp.re());
+        if (temp.im() == 0) return Double.valueOf(temp.re());
         else return temp;
     }
 
@@ -31,7 +31,7 @@ public class Power extends PostfixMathCommand
     {
         final Complex temp = c.power(d.doubleValue());
 
-        if (temp.im() == 0) return new Double(temp.re());
+        if (temp.im() == 0) return Double.valueOf(temp.re());
         else return temp;
     }
 
@@ -40,7 +40,7 @@ public class Power extends PostfixMathCommand
         final Complex base = new Complex(d.doubleValue(), 0.0);
         final Complex temp = base.power(c);
 
-        if (temp.im() == 0) return new Double(temp.re());
+        if (temp.im() == 0) return Double.valueOf(temp.re());
         else return temp;
     }
 
@@ -51,7 +51,7 @@ public class Power extends PostfixMathCommand
             final Complex c = new Complex(d1.doubleValue(), 0.0);
             return c.power(d2.doubleValue());
         }
-        else return new Double(Math.pow(d1.doubleValue(), d2.doubleValue()));
+        else return Double.valueOf(Math.pow(d1.doubleValue(), d2.doubleValue()));
     }
 
     public Object power(Object param1, Object param2) throws ParseException
