@@ -21,7 +21,7 @@ public class Real extends PostfixMathCommand
 
     public Number re(Object param) throws ParseException
     {
-        if (param instanceof Complex) return new Double(((Complex) param).re());
+        if (param instanceof Complex) return Double.valueOf(((Complex) param).re());
         else if (param instanceof Number) return (Number) param;
 
         throw new ParseException("Invalid parameter type");
