@@ -32,7 +32,7 @@ public class Sine extends PostfixMathCommand
     public Object sin(Object param) throws ParseException
     {
         if (param instanceof Complex) return ((Complex) param).sin();
-        else if (param instanceof Number) return new Double(Math.sin(((Number) param).doubleValue()));
+        else if (param instanceof Number) return Double.valueOf(Math.sin(((Number) param).doubleValue()));
 
         throw new ParseException("Invalid parameter type");
     }
